Fix some minor spacing stuff

--- a/client/assets/stylesheets/bitters/_variables.scss
+++ b/client/assets/stylesheets/bitters/_variables.scss
@@ -3,8 +3,8 @@ $medium-screen: 600px;
 $large-screen: 900px;
 
 // Typography
-$base-font-family: $font-stack-system;
-$heading-font-family: $base-font-family;
+$base-font-family: samurai;
+$heading-font-family: samurai;
 
 // Font Sizes
 $base-font-size: 1em;
