--- a/client/assets/stylesheets/tastichat/abstracts/_variables.scss
+++ b/client/assets/stylesheets/tastichat/abstracts/_variables.scss
@@ -1,2 +1,3 @@
 $avatar-height: 300px;
 $login-button-width: 150px;
+$write-message-height: 50px;
