--- a/client/assets/stylesheets/tastichat/base/_fonts.scss
+++ b/client/assets/stylesheets/tastichat/base/_fonts.scss
@@ -7,7 +7,3 @@
   font-family: "Shoguns Clan";
   src: asset-url("shoguns_clan.ttf") format("truetype");
 }
-
-h1, h2, h3, h4, h5, h6 {
-  font-family: samurai;
-}
